docs: add project readme