@@ -1,77 +1,124 @@
-# MiddleMan: RuneLite Game State Bridge
+# OSRS MiddleMan
 
-MiddleMan exposes game state from a running RuneLite client (game state, entities, inventory, camera, etc.) over HTTP **without recompiling RuneLite** and **without changing any files** in the main project. It runs as a Java agent inside the RuneLite JVM and serves JSON on port **8765**.
+OSRS MiddleMan is a local RuneLite bridge. It loads a Java agent into a RuneLite JVM, exposes Old School RuneScape state over a loopback HTTP API, and provides a dashboard for inspecting players, NPCs, world objects, ground items, inventory, equipment, camera, and game state.
 
-## Quick start: batch file (simplest)
+The project is designed to work without recompiling RuneLite. It either starts RuneLite with the agent or attaches the agent to an already running RuneLite process that was launched with attach support enabled.
 
-1. **Start RuneLite** so it can be attached to:  
-   `MiddleMan\launcher\launch-attachable.bat`
+## Features
 
-2. **When you want to attach or refresh the agent** (e.g. after code changes):  
-   `MiddleMan\attach-and-open.bat`  
-   This builds the agent, attaches to the running RuneLite (if found), and opens the dashboard. No exe, no JAVA_HOME needed in the exe—just run the bat from a terminal where Java is on PATH (or set JAVA_HOME so `build.bat` finds `javac`).
-
-## Optional: run the exe
-
-1. **Build once:** `MiddleMan\agent\build.bat`  
-2. **Build the exe:** `MiddleMan\build-exe.bat` → creates `MiddleMan\MiddleMan.exe`.  
-3. **Use it:** Double‑click **MiddleMan.exe** to start RuneLite with the agent (or attach if RuneLite is already running via launch-attachable.bat) and open the dashboard.
-
-## Two ways to run RuneLite with MiddleMan
-
-| You do this | MiddleMan.exe does |
-|-------------|---------------------|
-| Run **MiddleMan.exe** only | Starts RuneLite with the agent and opens the dashboard. |
-| Run **launch-attachable.bat** (or `launch.ps1 -AttachableOnly`), then **MiddleMan.exe** | Attaches the agent to the already‑running RuneLite and opens the dashboard. |
-
-To “launch RuneLite separately then MiddleMan.exe at any time,” start RuneLite with **MiddleMan\launcher\launch-attachable.bat** instead of `RuneLite.exe`. That starts RuneLite without `DisableAttachMechanism` so the exe can attach the agent later. If you start RuneLite with the normal `RuneLite.exe`, attach will fail; use the exe alone (it will start RuneLite with the agent) or use the attachable launcher first.
-
-## Dashboard and API
-
-- **Dashboard:** Open `MiddleMan/dashboard/index.html` (or let the exe open it). Port defaults to **8765**.
-- **API base:** `http://127.0.0.1:8765`
-
-| Endpoint | Description |
-|----------|-------------|
-| `GET /` | Service info and list of endpoints |
-| `GET /game/state` | Full snapshot: game state, local player, players, NPCs, world view, inventory, camera |
-| `GET /game/state/simple` | Current game state only (e.g. `LOGGED_IN`, `LOGIN_SCREEN`, `LOADING`) |
-| `GET /game/players` | List of players in the current world view |
-| `GET /game/npcs` | List of NPCs in the current world view |
-
-All responses are JSON with `Content-Type: application/json` and `Access-Control-Allow-Origin: *`.
-
-**Example:** `curl http://127.0.0.1:8765/game/state`
-
-## Reverting menu-action changes
-
-If menu-action stability changes cause issues, you can revert to the previous state:
-
-```bash
-git checkout pre-menu-actions-stability
-```
-
-Tag `pre-menu-actions-stability` was created before implementing scene-resolved menu actions for world objects, NPCs, and ground items.
-
-## Folder layout
-
-- **MiddleMan/agent/** – Java agent source and build. Output: `MiddleMan/agent/build/MiddleManAgent.jar`.
-- **MiddleMan/launcher/** – `launch.ps1` (with or without agent), `launch.bat`, `launch-attachable.bat`.
-- **MiddleMan/dashboard/** – `index.html` (simple GUI).
-- **MiddleMan/MiddleMan.exe** – One-click: attach or start RuneLite + agent, then open dashboard. Build with `build-exe.bat`.
-- **MiddleMan/README.md** – This file.
-
-Logs and any runtime files go under **MiddleMan/** (e.g. `middleman.log`), not the project root.
+- Java agent loaded with `-javaagent` or through the JDK attach API.
+- Local HTTP API on `127.0.0.1:8765`.
+- JSON snapshots for game state, players, NPCs, world objects, ground items, inventory, equipment, camera, and map context.
+- POST action endpoints for world objects, NPCs, and ground items.
+- Item sprite endpoint for dashboard rendering.
+- Swing dashboard that polls the local API and can trigger supported actions.
+- Windows launcher scripts plus a small `MiddleMan.exe` wrapper.
 
 ## Requirements
 
-- **Java 11+** to build the agent. The RuneLite JRE (project `jre\`) or system `java` is used to run RuneLite and, when attaching, the injector (attach needs a JDK with `jdk.attach`; if missing, the exe falls back to starting RuneLite with the agent).
-- **.NET Framework** for MiddleMan.exe (normal on Windows).
-- For **attach** to work, RuneLite must be started without `-XX:+DisableAttachMechanism` (use `launch-attachable.bat` or the exe’s own launch).
+- Windows.
+- RuneLite installed or available in the parent project layout expected by `launcher/launch.ps1`.
+- Java 11 or newer.
+- A JDK, not only a JRE, when attaching to an already running RuneLite process. The attach path needs the `jdk.attach` module.
+- .NET Framework to rebuild `MiddleMan.exe` from `OpenDashboard.cs`.
 
-**PowerShell:** If running `launch.ps1` directly fails due to execution policy, use **launch.bat** or **MiddleMan.exe**; they invoke PowerShell with `-ExecutionPolicy Bypass` for that run only.
+## Quick Start
 
-## Optional: dashboard only
+Start RuneLite in an attachable mode:
 
-To only open the dashboard (e.g. RuneLite is already running with the agent):  
-`MiddleMan.exe -d` or `MiddleMan.exe --dashboard-only`
+```bat
+launcher\launch-attachable.bat
+```
+
+Attach MiddleMan and open the dashboard:
+
+```bat
+attach-and-open.bat
+```
+
+If RuneLite is not running, `MiddleMan.exe` can also start RuneLite with the agent and open the dashboard.
+
+## Build
+
+Build the Java agent:
+
+```bat
+cd agent
+build.bat
+```
+
+Build the Windows wrapper:
+
+```bat
+build-exe.bat
+```
+
+The wrapper compiles `OpenDashboard.cs` into `MiddleMan.exe` using the .NET Framework C# compiler.
+
+## Running Modes
+
+| Mode | Command | Notes |
+| --- | --- | --- |
+| Start RuneLite with the agent | `launcher\launch.bat` | Uses `launcher\launch.ps1` and adds `-javaagent`. |
+| Start RuneLite attachable only | `launcher\launch-attachable.bat` | Starts RuneLite without `DisableAttachMechanism` so the agent can attach later. |
+| Attach to running RuneLite | `attach-and-open.bat` | Builds a fresh agent JAR, attaches it, then opens the dashboard. |
+| One-click wrapper | `MiddleMan.exe` | Builds the agent if possible, attaches or starts RuneLite, then opens the dashboard. |
+
+## API
+
+Base URL:
+
+```text
+http://127.0.0.1:8765
+```
+
+Endpoints:
+
+- `GET /` returns service information and endpoint names.
+- `GET /game/state` returns a full state snapshot.
+- `GET /game/state/simple` returns the current RuneLite game state.
+- `GET /game/players` returns visible player data.
+- `GET /game/npcs` returns visible NPC data.
+- `GET /game/worldobjects` returns visible world object data.
+- `GET /game/grounditems` returns visible ground item data.
+- `POST /game/worldobject/action` triggers a supported world-object action.
+- `POST /game/npc/action` triggers a supported NPC action.
+- `POST /game/grounditem/action` triggers a supported ground-item action.
+- `GET /game/sprite/item/{id}` returns item sprite data for dashboard display.
+- `GET /shutdown` stops the local server.
+
+Example:
+
+```bash
+curl http://127.0.0.1:8765/game/state
+```
+
+## Dashboard
+
+The dashboard can be opened directly from `dashboard/index.html` or through `MiddleMan.exe` / `attach-and-open.bat`. It shows the current API state and includes searchable sections for NPCs and world objects.
+
+The Java agent also contains a Swing dashboard implementation in `agent/src/main/java/middleman/agent/DashboardFrame.java`.
+
+## Repository Layout
+
+```text
+.
+|-- OpenDashboard.cs          # Windows wrapper source
+|-- MiddleMan.exe             # Prebuilt wrapper
+|-- attach-and-open.bat       # Build, attach, and open dashboard
+|-- build-exe.bat             # Build MiddleMan.exe
+|-- agent/                    # Java agent source and Gradle project
+|-- dashboard/                # Browser dashboard
+`-- launcher/                 # RuneLite launch scripts
+```
+
+## Troubleshooting
+
+- If attach fails, install a JDK and set `JAVA_HOME` so `java --add-modules jdk.attach` works.
+- If normal RuneLite was already started, close it and start with `launcher\launch-attachable.bat`.
+- If port `8765` is busy, stop the old agent or call `/shutdown`.
+- If the dashboard shows stale data, refresh after the agent reports that the API has started.
+
+## Safety
+
+This project introspects a live game client and can trigger in-game actions through local endpoints. Keep the API bound to `127.0.0.1`, do not expose it to a network, and only run it in environments where this kind of tooling is allowed.
